--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -30,7 +30,7 @@ jobs:
           python-version: '3.11' 
       
       - name: Generate navigation pages
-        run: python scripts/generation.py
+        run: make nav
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
