--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ exclude:
   - "README.md"
   - ".ruby-version"
   - "Makefile"
+  - "_posts"
 
 title: "DOC's Space"
 description: Here you can find everything you don't need.
