--- a/.github/workflows/build-pages.yaml
+++ b/.github/workflows/build-pages.yaml
@@ -24,18 +24,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python 3
-        uses: actions/setup-python@v5 
-        with:
-          python-version: '3.11' 
-      
-      - name: Generate navigation pages
-        run: make nav
-
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1.3'
+          ruby-version: "3.1.3"
           bundler-cache: true
           cache-version: 0
 
