--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: "DOC's Space"
 description: Here you can find everything you don't need.
 author:
   name: DOC
+repository: DOCtorActoAntohich/doctoractoantohich.github.io
 
 exclude:
   - .gitignore
