try setting a specific url

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ author:
   name: DOC
 repository: DOCtorActoAntohich/doctoractoantohich.github.io
 
+url: https://doctoractoantohich.github.io
+
 exclude:
   - .gitignore
   - README.md
